typestate-macro/tests/empty_module.stderr
error: Missing `#[automata]` struct.
 --> $DIR/empty_module.rs:3:1
  |
3 | #[typestate]
  | ^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
